<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<properties>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<commonsVFSVersion>2.9.0</commonsVFSVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sshtools</groupId>
	<artifactId>vfs</artifactId>
	<version>4.0.0</version>
	<name>VFS</name>
	<description>Various Commons VFS filesystems.</description>
	<url>http://www.sshtools.com</url>
	<packaging>pom</packaging>
	<inceptionYear>2012</inceptionYear>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh-sshtools</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh-sshtools</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<licenses>
		<license>
			<name>Apache License Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/sshtools/vfs</url>
		<connection>https://github.com/sshtools/vfs.git</connection>
	</scm>
	<developers>
		<developer>
			<id>lee</id>
			<name>Lee David Painter</name>
			<email>lee@sshtools.com</email>
		</developer>
		<developer>
			<id>brett</id>
			<name>Brett Smith</name>
			<email>brett@nervepoint.com</email>
		</developer>
	</developers>

	<modules>
		<module>jafp</module>
		<module>vfs-ext</module>
		<module>vfs-rfbftp</module>
		<module>vfs-s3</module>
		<module>vfs-azure</module>
		<module>vfs-dropbox</module>
		<module>vfs-googledrive</module>
		<module>vfs-webdav</module>
		<module>vfs-nfs</module>
		<module>vfs-afp</module>
        <module>vfs-gcs</module>
        <module>vfs-smb-ng</module>
		<module>vfs-ldap</module>
		<module>vfs-sftp</module>
	</modules>

	<dependencies>
		<!-- Tests -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	

	<profiles>
        <profile>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <configuration>
                                <!-- TODO: Why is this STILL broken! -->
                                <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>

                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

	<build>
		<pluginManagement>
			<plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.3.2</version>
					<executions>
						<execution>
							<id>javadoc-jar</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<!-- switch on dependency-driven aggregation -->
								<includeDependencySources>false</includeDependencySources>
								<dependencySourceIncludes>
									<!-- include ONLY dependencies I control -->
									<dependencySourceInclude>com.sshtools:*</dependencySourceInclude>
								</dependencySourceIncludes>
								<additionalparam>-Xdoclint:none</additionalparam>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.0.1</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<header>templates/Apache-2.txt</header>
						<properties>
							<owner>SSHTOOLS Limited</owner>
							<email>support@sshtools.com</email>
						</properties>
						<excludes>
							<exclude>**/README</exclude>
							<exclude>src/test/resources/**</exclude>
							<exclude>src/main/resources/**</exclude>
						</excludes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
								<goal>format</goal>
								<goal>remove</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.12</version>
					<extensions>true</extensions>
					<configuration>
						<serverId>ossrh-sshtools</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
		</plugins>
	</build>
</project>
